--- a/core/package.json
+++ b/core/package.json
@@ -43,11 +43,11 @@
   "size-limit": [
     {
       "limit": "10 KB",
-      "path": "dist/vflc-yet-another-tester.cjs.production.min.js"
+      "path": "dist/core.cjs.production.min.js"
     },
     {
       "limit": "10 KB",
-      "path": "dist/vflc-yet-another-tester.esm.js"
+      "path": "dist/core.esm.js"
     }
   ]
 }
