--- a/api/package.json
+++ b/api/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clhs-api/core": "0.0.0",
+    "@clhs-api/core": "latest",
     "next": "12.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
