--- a/core/package.json
+++ b/core/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "cheerio": "^1.0.0-rc.10",
+    "neverthrow": "^4.3.0",
     "utility-types": "^3.10.0"
   },
   "devDependencies": {
